# mmon

./: Cargo.toml  build.rs  icon.rc
.cargo/: config.toml
config/: config.toml  log4rs.yaml
src/: main.rs
