[package]
name = "BarcodeScannerMonitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.4"
lazy_static = "1.4.0"
log = "0.4.20"
log4rs = { git = "https://github.com/Dirreke/log4rs", branch = "time-triger" }
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = "1.0.193"
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System", "Win32_System_LibraryLoader", "Win32_UI_Shell_Common", "Win32_Graphics_Gdi"] }

[profile.release]
strip = true
lto = true
opt-level = "s"

[build-dependencies]
embed-resource = "2.4.0"
